altera nome do menu para turmas

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -758,7 +758,7 @@ h6 {
 }
 
 /*--------------------------------------------------------------
-# Dashboard
+# Turmas
 --------------------------------------------------------------*/
 /* Filter dropdown */
 .dashboard .filter {
