--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -383,6 +383,7 @@ h6 {
   box-shadow: 0px 2px 20px rgba(1, 41, 112, 0.1);
   background-color: #fff;
   padding-left: 20px;
+  background-color: #EDBA00;
   /* Toggle Sidebar Button */
   /* Search Bar */
 }
@@ -1230,4 +1231,14 @@ h6 {
   text-align: center;
   font-size: 13px;
   color: #012970;
+}
+
+.cor-roxa {
+  background-color: #6B20A8;
+  color: #ffffff; /* Cor do texto */
+}
+
+.cor-amarela {
+  background-color: #EDBA00;
+  color: #000000; /* Cor do texto */
 }
